获取登录用户信息，修改下拉bug，修改splash

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,18 +3,16 @@
     package="com.example.lvpeiling.nodddle">
 
     <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
-
-
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
     <application
+        android:name=".NodddleApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme"
-        android:name=".NodddleApplication">
+        android:theme="@style/AppTheme">
         <activity
             android:name=".ui.SplashActivity"
             android:theme="@style/AppNoActionBarTheme">
@@ -24,14 +22,17 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
         <activity
             android:name=".ui.SignInActivity"
             android:theme="@style/AppNoActionBarTheme" />
         <activity
             android:name=".ui.MainActivity"
             android:label="@string/app_name"
-            android:theme="@style/AppNoActionBarTheme"></activity>
+            android:theme="@style/AppNoActionBarTheme" />
+        <activity
+            android:name=".ui.ShotsDetailActivity"
+            android:label="@string/title_activity_shots_detail"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
     </application>
 
 </manifest>
