--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -45,7 +45,10 @@
             android:name=".ui.UserInfoActivity"
             android:label="@string/title_activity_user_info"
             android:theme="@style/AppTheme.NoActionBar" />
-        <activity android:name=".ui.LargeImageActivity"
+        <activity
+            android:name=".ui.LargeImageActivity"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity android:name=".ui.ShotsActivity"
             android:theme="@style/AppTheme.NoActionBar"></activity>
     </application>
 
